monticore-generator/src/test/resources/cocos/invalid/A2007/A2007Super.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2007;

grammar A2007Super extends mc.grammars.types.TestTypes{

  N = "one" M;

  M = Name;

  P = "some" M*;

  Q = "optional" M?;

}